--- a/client/app/app.less
+++ b/client/app/app.less
@@ -20,4 +20,5 @@
 @import 'main/main.less';
 @import 'modal/modal.less';
 @import 'task/task-edit.less';
+@import 'task/task-entry.less';
 // endinjector
