--- a/client/components/task/task-edit.html
+++ b/client/components/task/task-edit.html
@@ -1,7 +1,7 @@
 <div class="task-entry">
   <span class="task-attr-title">
     <h2 >Title</h2>
-    <input autofocus type="text" class="form-control" required="true" ng-model="task.value.data.title"/>
+    <input autofocus id="titleText" type="text" class="form-control" required="true" ng-model="task.value.data.title"/>
   </span>
 
   <span class="task-attr-description">
