--- a/client/components/task/task-entry.html
+++ b/client/components/task/task-entry.html
@@ -3,4 +3,5 @@
     <span ng-show="::task.data.context">[{{::task.data.context}}]</span>
     <span ng-show="::task.data.due"><i>&nbsp;&nbsp;{{::task.data.due | date: 'MMM d, yyyy'}}</i></span>
   </a>
+  <a ng-click="newChildTask(task)">[+]</a>  
 </li>
